Fix chevron alignment of accordion button

--- a/src/ensembl/src/content/app/entity-viewer/gene-view/components/gene-view-sidebar/overview/GeneOverview.scss
+++ b/src/ensembl/src/content/app/entity-viewer/gene-view/components/gene-view-sidebar/overview/GeneOverview.scss
@@ -46,7 +46,7 @@
   
   .entityViewerAccordionButton {
     color: $blue;
-    padding: 5px 0 5px 15px;
+    padding: 5px 15px 5px 15px;
     border-radius: 5px;
   
     &:before,
